[tool.poetry]
name = "demand-customerorder-bot"
version = "0.1.0"
description = ""
authors = ["Evgeniya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
schedule = "^1.2.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
